--- a/week5/hottj/demo/pom.xml
+++ b/week5/hottj/demo/pom.xml
@@ -101,6 +101,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.1.7.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
