Security with Configuration

--- a/week5/hottj/demo/src/main/resources/application.yml
+++ b/week5/hottj/demo/src/main/resources/application.yml
@@ -8,7 +8,10 @@ logging:
 spring:
   messages:
     basename: messages
-
+  security:
+    user:
+      name: hottj
+      password : root
 management:
   endpoints:
     web:
