--- a/week6/hottj/community/build.gradle
+++ b/week6/hottj/community/build.gradle
@@ -20,10 +20,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'junit:junit:4.12'
-	implementation 'junit:junit:4.12'
-	implementation 'junit:junit:4.12'
-	runtime('com.h2database:h2')
+	runtimeOnly 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compileOnly('org.projectlombok:lombok')
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
