--- a/week7/hottj/Spring-Boot-Community-Web/build.gradle
+++ b/week7/hottj/Spring-Boot-Community-Web/build.gradle
@@ -24,6 +24,9 @@ repositories {
 }
 
 dependencies {
+	compile('org.springframework.security:spring-security-oauth2-client')
+	compile('org.springframework.security:spring-security-oauth2-jose')
+	compile('org.springframework.boot:spring-boot-starter-security')
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
